--- a/report/project_report.Rmd
+++ b/report/project_report.Rmd
@@ -21,11 +21,11 @@ Several computer scientists from the Ohio State University present exactly this:
 
 # Project Aim 
 
-The aim of this project is to use Car Accident Data from North Carolina in 2016-2018 to determine which factors have the most influence on the severity of car accidents in the state. Then, we aim to use these factors to build a model to predict the severity of future car accidents in North Carolina and compare the accuracy with 2019 data.
+The aim of this project is to use Car Accident Data from North Carolina in 2016-2018 to determine which factors have the most influence on the severity of car accidents in the state. We take two different approaches to construct models to predict the severity of car accidents, one through proportional oddes model and one through machine learning. We then use the 2019 data to evaluate and compare the performance of our prediction models.
 
 # R-Package
 
-Our R package `name` contains ...
+Our R package `name` contains functions to fit a proportional odds model, random forest....
 
 ```{r}
 ## load package here 
@@ -49,23 +49,29 @@ data_filtered <- data %>% select(ID, Severity, Start_Time, End_Time, Distance.mi
   select(-Start_Time)
 ```
 
-Variables: 
+Variables:  
+      (YC: (i) would this be easier to read if we group by their role in the analysis(outcome/predictor candidates/dropped)?
+           (ii)Do we start with the same set subset of variables for both proportional odds model and RF?)
+      
 1. ID -- no duplicated IDs, all unique 
 2. Source (API that reported accident) -- remove
-3. TMC -- remove
-4. Severity -- response 
-5. Start Time -- keep the hour and minute of the day? aggregate?, keep month?
+3. TMC -- Traffic Message Channel (TMC) code, remove
+4. Severity -- severity of the accident in terms of the impact on traffic, which is an integer from 1 to 4 with increasing impact. This is an ordinal variable and the outcome of interest.  
+
+(YC: the dataset and paper is rather vague on how severity is defined or derived. Length of delay is the only criterion they explicitly mentioned? I would guess that scope, for example how many lanes affected, is probably taken into account?)
+
+5. Start Time -- start time of the accident. keep the hour and minute of the day? aggregate?, keep month?
 6. End Time 
 7. Start Lat -- remove 
 8. Start Lng -- remove
 9. End Lat -- remove
 10. End Lng -- remove
-11. Distance (Length of road extent affected by accident) -- only 13% is nonzero?
+11. Distance (Length of road extent affected by accident) -- only 13% is nonzero? (YC: probably because the unit is mile)
 12. Description (in Natural Language) -- remove for now?
 13. Number (Street) -- remove
 14. Street (Name) -- remove
 15. Side (of Street -- R/L)
-16. City -- remove for now? or aggregate rural/urban?
+16. City -- remove for now? or aggregate rural/urban? (YC: then we need some way to distinguish between rural/urban)
 17. County -- remove for now? or aggregate rural/urban?
 18. State -- remove
 19. Zipcode -- remove 
@@ -74,7 +80,7 @@ Variables:
 22. Airport Code -- remove
 23. Weather Timestamp -- remove
 24. Temperature 
-25. Wind Chill  -- remove missingness
+25. Wind Chill  -- heavy missingness, remove
 26. Humidity (%)
 27. Pressure (Air, in inches)
 28. Visibility (in miles) 
@@ -101,9 +107,23 @@ Variables:
 49. Astronomical_Twilight -- remove
 
 
-# Methods 
 
-## Proportional Odds Model 
+# Methods 
+First, we apply a proportional odds model with the severity of an accident as the outcome, and start time ,<---insert list of candidate variables--->, as predictors. Based on paramter estimates of this model <---potentially with penalization--->, we identify variables that are most associated with severirty. In parallel, <--starting with the same set of variables?-->we use random forest to find the predictors that best yields the best classification.  
+
+
+
+## Proportional Odds Model  
+For a single severity outcome $Y_i$ with covariates $X_i$, the proportional odds model suggests that 
+$$ logit(P(Y_i\leq k))=log(\frac{P(Y_i\leq k)}{1-P(Y_i\leq k)}) = \alpha_k + X_i^T\beta$$
+, or equivalently
+
+$$ P(Y_i\leq k) = \frac{1}{1 + exp(-\alpha_k - X_i^T\beta)}$$
+for k=1, 2, and 3. The log likelihood function for n accidents is therefore given by (YC: here I use a slightly different notation than the one used by Marco (note the sign of alpha))
+$$\sum_{i=1}^n\sum_{k=1}^4I(Y_i=k)log(P(Y_i=k))\\
+=\sum_{i=1}^n \{I(Y_i=1)log(P(Yi\le1))+ I(Y_i=2)[log(P(Yi\le2)-P(Y_i\le1)] + I(Y_i=3)[log(P(Yi\le3)-P(Y_i\le2)] + I(Y_i=4)[log(1-P(Y_i\le3)]\}\\
+=\sum_{i=1}^n\{I(Y_i=1)log(\frac{1}{1+exp(-\alpha_1 - X_i^T\beta)})+ I(Y_i=2)log(\frac{1}{1+exp(-\alpha_2 - X_i^T\beta)}-\frac{1}{1+exp(-\alpha_1 - X_i^T\beta)})+ \\I(Y_i=3)log(\frac{1}{1+exp(-\alpha_3 - X_i^T\beta)}-\frac{1}{1+exp(-\alpha_2 - X_i^T\beta)})+ I(Y_i=2)log(\frac{1}{1+exp(-\alpha_2 - X_i^T\beta)}-\frac{1}{1+exp(-\alpha_1 - X_i^T\beta)})\}$$
+(YC: Do we want to access the proportional odds assumption?)
 
 ## Random Forest
 
@@ -119,7 +139,7 @@ Variables:
 
 # Data References 
 
-Website: https://www.kaggle.com/sobhanmoosavi/us-accidents
+Source of data: https://www.kaggle.com/sobhanmoosavi/us-accidents
 
 [1] Moosavi, Sobhan, Mohammad Hossein Samavatian, Srinivasan Parthasarathy, and Rajiv
       Ramnath. “A Countrywide Traffic Accident Dataset.”, 2019.
