--- a/report/project_report.Rmd
+++ b/report/project_report.Rmd
@@ -17,7 +17,7 @@ library(tidyverse)
 
 Sitting in traffic is not ideal for anyone, and it is especially frustrating when the traffic is caused by an accident. It is an unexpected delay, and many times it is completely uncertain how long the delay will last. Traffic accident data can be an invaluble resource, as it can provide information that can potentially aid in predicting conditions where accidents are prone to happen so steps can be taken to prevent the accident. Further, this data could be useful in predicting how severely an accident will delay the following drivers after the accident happens so steps can be taken to reduce this delay as needed. 
 
-Several computer scientists from the Ohio State University present exactly this: a dataset of traffic accidents from the contiguous United States, covering 2.25 accidents between February 2016 and December 2019. As of March 2019, of the 49 states included, North Carolina had the fourth highest number of accidents in the dataset at 109,000 [1]. Because of the wide range of attributes collected with each accident in the dataset, this has the potential to provide the information needed to start making decisions about how to prevent accidents and the delays associated.
+Several computer scientists from the Ohio State University present exactly this: a dataset of traffic accidents from the contiguous United States, covering 2.95 million accidents with data collected between February 2016 and December 2019. As of March 2019, of the 49 states included, North Carolina had the fourth highest number of accidents in the dataset at 109,000 [1]. Because of the wide range of attributes collected with each accident in the dataset, this has the potential to provide the information needed to start making decisions about how to prevent accidents and the delays associated.
 
 # Project Aim 
 
@@ -25,7 +25,7 @@ The aim of this project is to use Car Accident Data from North Carolina in 2016-
 
 # R-Package
 
-Our R package `name` contains functions to fit a proportional odds model, random forest....
+Our R package `group3project` contains functions to fit a proportional odds model, random forest....
 
 ```{r}
 ## load package here 
@@ -33,80 +33,53 @@ Our R package `name` contains functions to fit a proportional odds model, random
 
 # Data
 
-The dataset used contains 142,460 traffic accidents from North Carolina between the years 2016 and 2019. The original dataset had 49 total attributes, including attributes related to traffic, location, weather, points of interest, and period of day. For our purposes, we removed all location attributes. We also chose to remove Wind Chill and Precipitation since they had around 60% missingess.
+The final dataset used contains 119,279 traffic accidents from North Carolina between the years 2016 and 2019. The original dataset had 49 total attributes, including attributes related to traffic, location, weather, points of interest, and period of day. For our purposes, we removed all location attributes.(?? not done yet) We also chose to remove Wind Chill and Precipitation since they had around 60% missingess. Additionally, most of the points of interest variables had very low variability, so we chose only to keep Crossing and Traffic Signal (TRUE/FALSE variables) (not correct right now in filtered dataset).
 
 ```{r}
-data <- read.csv("NC_Accidents.csv")
-data_filtered <- data %>% select(ID, Severity, Start_Time, End_Time, Distance.mi., 
-                                 Side, Temperature.F., Humidity..., Pressure.in.,
-                                 Visibility.mi., Wind_Direction, Wind_Speed.mph., 
-                                 Weather_Condition, Amenity, Bump, Crossing, Give_Way, 
-                                 Junction, 
-                                 No_Exit, Railway, Roundabout, Station, Stop, 
-                                 Traffic_Calming, Traffic_Signal, Turning_Loop,
-                                 Sunrise_Sunset) %>% 
-  mutate(Month = (Start_Time %>% as.POSIXlt())$mon + 1, Hour =  (Start_Time %>% as.POSIXlt())$hour) %>% 
-  select(-Start_Time, -End_Time)
+data_filtered <- read.csv("../data/NC_Accidents_filtered.csv")
 ```
 
 Variables:  
       (YC: (i) would this be easier to read if we group by their role in the analysis(outcome/predictor candidates/dropped)?
            (ii)Do we start with the same set subset of variables for both proportional odds model and RF?)
-      
-1. ID -- no duplicated IDs, all unique 
-2. Source (API that reported accident) -- remove
-3. TMC -- Traffic Message Channel (TMC) code, remove
-4. Severity -- severity of the accident in terms of the impact on traffic, which is an integer from 1 to 4 with increasing impact. This is an ordinal variable and the outcome of interest.  
+           
+The Final Selection of Variables is as follows: 
+
+**Outcome: **
+1. Severity:  severity of the accident in terms of the impact on traffic, which is an integer from 1 to 4 with increasing impact. This is an ordinal variable and the outcome of interest.  
 
 (YC: the dataset and paper is rather vague on how severity is defined or derived. Length of delay is the only criterion they explicitly mentioned? I would guess that scope, for example how many lanes affected, is probably taken into account?)
 
-5. Start Time -- start time of the accident. keep the hour and minute of the day? aggregate?, keep month?
-6. End Time 
-7. Start Lat -- remove 
-8. Start Lng -- remove
-9. End Lat -- remove
-10. End Lng -- remove
-11. Distance (Length of road extent affected by accident) -- only 13% is nonzero? (YC: probably because the unit is mile)
-12. Description (in Natural Language) -- remove for now?
-13. Number (Street) -- remove
-14. Street (Name) -- remove
-15. Side (of Street -- R/L)
-16. City -- remove for now? or aggregate rural/urban? (YC: then we need some way to distinguish between rural/urban)
-17. County -- remove for now? or aggregate rural/urban?
-18. State -- remove
-19. Zipcode -- remove 
-20. Country -- remove
-21. Timezone -- remove 
-22. Airport Code -- remove
-23. Weather Timestamp -- remove
-24. Temperature 
-25. Wind Chill  -- heavy missingness, remove
-26. Humidity (%)
-27. Pressure (Air, in inches)
-28. Visibility (in miles) 
-29. Wind Direction --- aggregate CALM vs NOT CALM?
-30. Wind Speed (mph) 
-31. Precipitation (in inches) -- remove missingness
-32. Weather Condition -- aggregate? (53 factors)
-33. Amenity 
-34. Bump (presence of speed bump in nearby location)
-35. Crossing (presence of crossing nearby)
-36. Give_Way (presence of give_way sign nearby)
-37. Junction (presence of junction nearby)
-38. No_Exit (presence of no_exit sign nearby)
-39. Railway (presence of railway nearby)
-40. Roundabout 
-41. Station 
-42. Stop (sign)
-43. Traffic_Calming 
-44. Traffic_Signal 
-45. Turning_Loop
-46. Sunrise_Sunset 
-47. Civil_Twilight -- remove
-48. Nautical_Twilight -- remove
-49. Astronomical_Twilight -- remove
-
-
+**Predictors: **  
+1. Source (API that reported accident) -- remove  
+2. Start Time -- start time of the accident. keep the hour and minute of the day? aggregate?, keep month?  
+3. End Time   
+4. Start Lat -- remove 
+5. Start Lng -- remove  
+6. Description (in Natural Language) -- remove for now?  
+8. Street (Name) -- remove  
+9. Side (of Street -- R/L)  
+10. City -- remove for now? or aggregate rural/urban? (YC: then we need some way to distinguish between rural/urban)  
+11. County -- remove for now? or aggregate rural/urban?  
+12. State -- remove  
+13. Zipcode -- remove   
+14. Country -- remove  
+15. Timezone -- remove   
+16. Airport Code -- remove  
+17. Weather Timestamp -- remove  
+18. Temperature   
+19. Humidity (%)  
+20. Pressure (Air, in inches)  
+21. Visibility (in miles)   
+22. Wind Direction --- aggregate CALM vs NOT CALM?  
+23. Wind Speed (mph)   
+24. Weather Condition -- aggregate? (53 factors)  
+25. Crossing (presence of crossing nearby)  
+26. Traffic_Signal   
+27. Sunrise_Sunset   
+28. Civil_Twilight -- remove  
+29. Nautical_Twilight -- remove  
+30. Astronomical_Twilight -- remove  
 
 # Methods 
 First, we apply a proportional odds model with the severity of an accident as the outcome, and start time ,<---insert list of candidate variables--->, as predictors. Based on paramter estimates of this model <---potentially with penalization--->, we identify variables that are most associated with severirty. In parallel, <--starting with the same set of variables?-->we use random forest to find the predictors that best yields the best classification.  
