--- a/report/project_report.Rmd
+++ b/report/project_report.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'BIOS 735 Final Project: Car Accident Severity'
 author: "Marissa Ashner, Yen Chang, Marco Chen, Weifang Liu, Yi Tang, Joyce Yan"
-date: "4/27/2020"
+date: "4/23/2020"
 output:
   html_document:
     df_print: paged
@@ -25,7 +25,19 @@ The aim of this project is to use Car Accident Data from North Carolina in 2016-
 
 # R-Package
 
-Our R package `group3project` contains functions to fit a proportional odds model, random forest....
+Our R package `group3project` contains the functions needed to fit a proportional odds model and random forest as well as the datasets we used to do so for this report: 
+
+*Note: edit this as needed as we fill in the R package, may not need our own Random Forest functions
+
+* Functions for Proportional Odds Model 
+
+* Functions for Random Forest 
+
+* Datasets 
+    + Testing Data 
+    + Training Data
+    + Full NC Data
+
 
 ```{r}
 ## load package here 
@@ -33,10 +45,14 @@ Our R package `group3project` contains functions to fit a proportional odds mode
 
 # Data
 
-The final dataset used contains 119,279 traffic accidents from North Carolina between the years 2016 and 2019. The original dataset had 49 total attributes, including attributes related to traffic, location, weather, points of interest, and period of day. For our purposes, we removed all location attributes.(?? not done yet) We also chose to remove Wind Chill and Precipitation since they had around 60% missingess. Additionally, most of the points of interest variables had very low variability, so we chose only to keep Crossing and Traffic Signal (TRUE/FALSE variables) (not correct right now in filtered dataset).
+The final dataset used contains 119,279 traffic accidents from North Carolina between the years 2016 and 2019. The original dataset had 49 total attributes, including attributes related to traffic, location, weather, points of interest, and period of day. For our purposes, we removed most location attributes (?? not done yet). We also chose to remove Wind Chill and Precipitation since they had around 60% missingess. Additionally, most of the points of interest variables had very low variability across observations, so we chose only to keep Crossing and Traffic Signal.
+
+In terms of traffic incidents, rows were removed that were missing all weather variables. Additionally, the data were split up into training data (pre-2019) and testing data (2019) as mentioned previously. The final training dataset has 75,887 observations and the testing has 43,392.
 
 ```{r}
 data_filtered <- read.csv("../data/NC_Accidents_filtered.csv")
+data_training <- read.csv("../data/NC_Accidents_trn.csv")
+data_testing <- read.csv("../data/NC_Accidents_tst.csv")
 ```
 
 Variables:  
@@ -45,41 +61,48 @@ Variables:
            
 The Final Selection of Variables is as follows: 
 
-**Outcome: **
-1. Severity:  severity of the accident in terms of the impact on traffic, which is an integer from 1 to 4 with increasing impact. This is an ordinal variable and the outcome of interest.  
+### Outcome:
+1. Severity:  severity of the accident in terms of the impact on traffic, which is an integer from 1 to 3 with increasing impact. This is an ordinal variable and the outcome of interest.  
 
-(YC: the dataset and paper is rather vague on how severity is defined or derived. Length of delay is the only criterion they explicitly mentioned? I would guess that scope, for example how many lanes affected, is probably taken into account?)
+Additionally, the variable had four categories (1-4) but only 24 observations had severity of 1, so we combined severities 1 and 2 and readjusted the scale.  
 
-**Predictors: **  
-1. Source (API that reported accident) -- remove  
+It should be noted that the dataset sources are rather vague on the definition and derivation of this outcome variable. Length of delay caused by the accident is mentioned, and we assume that scope, such as how many lane closures there are, may also be taken into account when determining the severity. 
+
+### Predictors:
+
+*Note, my comments on the variables will be removed once we finalize the filtered dataset
+  
+**Location/Time** 
+
+1. Source: categorical, API that reported accident (MapQuest, Bing, MapQuest-Bing) -- remove?   
 2. Start Time -- start time of the accident. keep the hour and minute of the day? aggregate?, keep month?  
-3. End Time   
-4. Start Lat -- remove 
-5. Start Lng -- remove  
-6. Description (in Natural Language) -- remove for now?  
-8. Street (Name) -- remove  
-9. Side (of Street -- R/L)  
-10. City -- remove for now? or aggregate rural/urban? (YC: then we need some way to distinguish between rural/urban)  
-11. County -- remove for now? or aggregate rural/urban?  
-12. State -- remove  
-13. Zipcode -- remove   
-14. Country -- remove  
-15. Timezone -- remove   
-16. Airport Code -- remove  
-17. Weather Timestamp -- remove  
-18. Temperature   
-19. Humidity (%)  
-20. Pressure (Air, in inches)  
-21. Visibility (in miles)   
-22. Wind Direction --- aggregate CALM vs NOT CALM?  
-23. Wind Speed (mph)   
-24. Weather Condition -- aggregate? (53 factors)  
-25. Crossing (presence of crossing nearby)  
-26. Traffic_Signal   
-27. Sunrise_Sunset   
-28. Civil_Twilight -- remove  
-29. Nautical_Twilight -- remove  
-30. Astronomical_Twilight -- remove  
+3. End Time   -- end time of accident remove? 
+4. Start Lat -- remove?  
+5. Start Lng -- remove?  
+6. Description: in Natural Language, description of the accident  -- remove for now?  
+7. Street: character, street name -- remove?  
+8. Side: categorical, side of street (Left/Right)  
+9. City -- remove for now? or aggregate rural/urban? (YC: then we need some way to distinguish between rural/urban)  
+10. County -- remove for now? or aggregate rural/urban?  
+11. Zipcode -- remove   
+12. Airport Code -- remove (86 levels)    
+13. Sunrise_Sunset: categorical (Day/Night)  
+  
+**Weather**  
+
+14. Weather Timestamp -- remove  
+15. Temperature: numeric, degrees Fahrenheit    
+16. Humidity: numeric, percentage  
+17. Pressure: numeric air pressure, in inches  
+18. Visibility: numeric, in miles  
+19. Wind Direction --- aggregate CALM vs NOT CALM?  
+20. Wind Speed: numeric, in mph 
+21. Weather Condition -- aggregate? (53 factors)  
+  
+**Points of Interest**  
+
+22. Crossing: TRUE/FALSE, presence of a crossing nearby  
+23. Traffic_Signal: TRUE/FALSE, presence of a traffic signal nearby  
 
 # Methods 
 First, we apply a proportional odds model with the severity of an accident as the outcome, and start time ,<---insert list of candidate variables--->, as predictors. Based on paramter estimates of this model <---potentially with penalization--->, we identify variables that are most associated with severirty. In parallel, <--starting with the same set of variables?-->we use random forest to find the predictors that best yields the best classification.  
@@ -100,6 +123,8 @@ $$\sum_{i=1}^n\sum_{k=1}^4I(Y_i=k)log(P(Y_i=k))\\
 
 ## Random Forest
 
+## Evaluation and Comparison of Models
+
 # Results 
 
 ## Proportional Odds Model 
@@ -109,6 +134,8 @@ $$\sum_{i=1}^n\sum_{k=1}^4I(Y_i=k)log(P(Y_i=k))\\
 ## Method Comparison 
 
 # Discussion 
+
+## Limitations 
 
 # Data References 
 
